--- a/src/app/modules/disbursement/budget/setup/setup.component.html
+++ b/src/app/modules/disbursement/budget/setup/setup.component.html
@@ -111,7 +111,7 @@
             </div>
             <div class="col-sm-5">
                 <button nbButton status="primary" outline class="white-background mr-2">Cancel</button>
-                <button nbButton status="primary" (click)="updateBudgetItem()">Update</button>
+                <button nbButton status="primary" (click)="updateBudgetItem()">Save</button>
             </div>
           </div>
         </form>
