--- a/src/app/modules/loan/process-request/process-request.component.html
+++ b/src/app/modules/loan/process-request/process-request.component.html
@@ -13,8 +13,8 @@
 </div> -->
 
 <nb-card>
-  <nb-card-header>
-   Repayment Schedule
+  <nb-card-header style="display: flex; justify-content: space-between;">
+    <h6>Repayment Schedule</h6> <button nbButton status="primary" (click)="simulateLoanRepayment()">Simulate Repayment</button>
   </nb-card-header>
 
   <nb-card-body>
@@ -23,7 +23,7 @@
   </nb-card-body>
 </nb-card>
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-sm-8">
     <nb-card>
       <nb-card-body>
@@ -161,7 +161,7 @@
       </nb-card-body>
     </nb-card>
   </div>
-</div>
+</div> -->
 
 
 
