--- a/src/app/modules/loan/process-request/process-request.component.html
+++ b/src/app/modules/loan/process-request/process-request.component.html
@@ -23,7 +23,7 @@
   </nb-card-body>
 </nb-card>
 
-<!-- <div class="row">
+<div class="row">
   <div class="col-sm-8">
     <nb-card>
       <nb-card-body>
@@ -161,7 +161,7 @@
       </nb-card-body>
     </nb-card>
   </div>
-</div> -->
+</div>
 
 
 
